--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
     "vue": "latest",
     "vue-router": "latest"
   },
-  "devDependencies": { "@nuxt/content": "^2.13.4", "@tailwindcss/typography": "^0.5.15" }
+  "devDependencies": { "@nuxt/content": "^2.13.4", "@nuxt/image": "^1.8.1", "@tailwindcss/typography": "^0.5.15" }
 }
